# rs-clickhouse-writer

./: Cargo.toml  Dockerfile  build.rs
.github/workflows/: docker-image.yml
proto/: crypto.proto  news.proto  sherpa.proto  stock.proto
sql/: bar.sql  daily_bar.sql  luld.sql  quote.sql  status.sql  trade.sql  trade_cancel.sql  trade_correction.sql  updated_bar.sql
src/: main.rs
