[package]
name = "rs-clickhouse-writer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = { version = "0.3", features = ["sink"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tonic = "0.10"
prost = { version = "*", features = ["prost-derive"] }
async-stream = { version = "0.3" }
tonic-reflection = "0.10"
clickhouse = { version = "*", features = ["time"] }
# url = "2"
time = { version = "*" }

[build-dependencies]
tonic-build = "0.10"
